# cally-nx

./: .pre-commit-config.yaml  README.md  cally.py  pyproject.toml
.github/workflows/: flake8.yml
cally_nx/: __init__.py  cli.py
